# flight_robotics

./: LICENSE  README.md
gazebo_ros_assets/rrbot_control/config/: rrbot_control.yaml
gazebo_ros_assets/rrbot_control/launch/: rrbot_control.launch
gazebo_ros_assets/rrbot_description/: CMakeLists.txt
gazebo_ros_assets/rrbot_description/nodes/: simulink_ros_interface.py
gazebo_ros_assets/rrbot_description/urdf/: rrbot.dae  rrbot.urdf  rrbot.xacro
gazebo_ros_assets/rrbot_gazebo/launch/: rrbot_world.launch
simulink/: init.m  larix_simulink_gazebo.slx  larix_simulink_gazebo.slxc  larix_simulink_gazebo_altitude_control.slx
simulink/initScripts/: bus_definition.mat  controlalloc.mat  initAtmos.m  initBusDef.m  initBusDef_backup.m  initController.m  initPropeller.m  initPropulsion.m  initSensors.m  initVehicle.m
simulink/models/: TriggeredIntegrator.slx
